src/test/deca/context/valid/personal/class_two_same_declaration.deca
// Description:
//    test minimaliste declare le meme champ dans la class et la super class
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {
    int a;
}
class A extends B {
   int a;
}
