src/test/deca/context/invalid/new_not_class.deca
// Description:
//    Selection dans main protected
//
// Resultats:
//
//
// Historique:
//    cree le 19/01/2025


class A{
    void p() {}
}
{
    int B;
    B a = new B();

}